Remove null checking builder